fix: added less spacing + larger text field to report modal (#110)

--- a/src/components/ReportUser/ReportUser.scss
+++ b/src/components/ReportUser/ReportUser.scss
@@ -51,8 +51,8 @@
   }
 
   &__textArea {
-    width: 50%;
-    margin-top: 50px;
+    width: 70%;
+    margin-top: 10px;
     margin-right: 45px;
   }
 
